fix visibility bug for the settings drawer

--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ body > canvas{
     width: 200px;
     box-shadow: -0px 0px 7px 0px rgba(0,0,0,0.6);
     font-weight: lighter;
-
+    z-index: 1;
 }
 .settingsLine{
     width: 190px;
